--- a/src/client/component/MainPanel.scss
+++ b/src/client/component/MainPanel.scss
@@ -1,9 +1,32 @@
 .main-panel-container {
-    height: 667px;
-    width: 375px;
+    height: 100%;
+    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: whitesmoke;
-    box-shadow: 0 0 15px gray;
+    flex-direction: column;
+    .user-info-container {
+        flex: 0 0 auto;
+        height: 40px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        border-bottom: 1px solid gray;
+        padding: 10px;
+        .user-name {
+            margin: 0 10px;
+        }
+        img {
+            height: 40px;
+            border-radius: 20px;
+        }
+    }
+    .song-list {
+        flex: 1 1 auto;
+        overflow-y: auto;
+        padding: 5px 10px;
+    }
+    .player-container {
+        height: 60px;
+        flex: 0 0 auto;
+        border-top: 1px solid gray;
+    }
 }
