add approved toastr when someone want to listen with you

--- a/src/client/component/FollowList.scss
+++ b/src/client/component/FollowList.scss
@@ -13,6 +13,7 @@
         padding: 10px 5px;
         border-radius: 10px;
         width: 290px;
+        margin: 10px 0;
         .avatar {
             flex: 0 0 auto;
         }
